# LCTAR

./: .env.example  .gitignore  .pre-commit-config.yaml  .repomixignore  0001__initial_8py.html  0001__initial_8py.js  0001__initial_8py_source.html  0002__delete__emailverificationtoken_8py.html  0002__delete__emailverificationtoken_8py.js  0002__delete__emailverificationtoken_8py_source.html  ARRecorder_8jsx.html  ARRecorder_8jsx.js  ARRecorder_8jsx_source.html  ApiContext_8jsx.html  ApiContext_8jsx.js  ApiContext_8jsx_source.html  App_8jsx.html  App_8jsx_source.html  AprilTagLayoutEditor_8jsx.html  AprilTagLayoutEditor_8jsx.js  AprilTagLayoutEditor_8jsx_source.html  CombinedModel_8jsx.html  CombinedModel_8jsx_source.html  CoordinateTransformer_8jsx.html  CoordinateTransformer_8jsx.js  CoordinateTransformer_8jsx_source.html  DebugCube_8jsx.html  DebugCube_8jsx_source.html  Dockerfile  Doxyfile  IceCreams_8jsx.html  IceCreams_8jsx_source.html  LandingPageTemplate_8jsx.html  LandingPageTemplate_8jsx.js  LandingPageTemplate_8jsx_source.html  Landing_8jsx.html  Landing_8jsx.js  Landing_8jsx_source.html  Orangebox_8jsx.html  Orangebox_8jsx_source.html  (+589 more)
.github/workflows/: ci.yml  docs.yml
arb/: manage.py
arb/arb/: __init__.py  admin.py  asgi.py  celery.py  middleware.py  models.py  settings.py  tasks.py  tests.py  urls.py  views.py  wsgi.py
arb/arb/migrations/: 0001_initial.py  0002_delete_emailverificationtoken.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_promote.db
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  inference.py  logs.py  videos.py
backend/app/core/: config.py  database.py  security.py
backend/app/i18n/: __init__.py  translator.py
backend/app/i18n/locales/en/: messages.yml
backend/app/i18n/locales/ru/: messages.yml
backend/app/models/: __init__.py  character.py  log.py  user.py  video.py
backend/app/schemas/: __init__.py  auth.py  logs.py  video.py
backend/app/services/: gamification.py
backend/app/services/inference/: pipeline.py
backend/app/utils/: height_calc.py
backend/i18n/: DEPRECATED.txt
backend/i18n/locales/en/: messages.yml
backend/i18n/locales/ru/: messages.yml
backend/lctar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin_promote_stub.py  test_auth_flow.py  test_height_formula.py  test_inference_stub.py  test_logs.py  test_video_upload_score.py
docs/html/: 0001__initial_8py.html  0001__initial_8py.js  0001__initial_8py_source.html  0002__delete__emailverificationtoken_8py.html  0002__delete__emailverificationtoken_8py.js  0002__delete__emailverificationtoken_8py_source.html  ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  admin_8py.html  admin_8py.js  admin_8py_source.html  annotated.html  annotated_dup.js  asgi_8py.html  asgi_8py.js  asgi_8py_source.html  celery_8py.html  celery_8py.js  celery_8py_source.html  classarb_1_1admin_1_1_asset_admin-members.html  classarb_1_1admin_1_1_asset_admin.html  classarb_1_1admin_1_1_asset_admin.js  classarb_1_1admin_1_1_promo_code_admin-members.html  classarb_1_1admin_1_1_promo_code_admin.html  classarb_1_1admin_1_1_promo_code_admin.js  classarb_1_1admin_1_1_session_admin-members.html  classarb_1_1admin_1_1_session_admin.html  classarb_1_1admin_1_1_session_admin.js  classarb_1_1admin_1_1_session_item_progress_admin-members.html  classarb_1_1admin_1_1_session_item_progress_admin.html  classarb_1_1admin_1_1_session_item_progress_admin.js  classarb_1_1admin_1_1_session_item_progress_inline-members.html  classarb_1_1admin_1_1_session_item_progress_inline.html  classarb_1_1admin_1_1_session_item_progress_inline.js  classarb_1_1admin_1_1_user_admin-members.html  classarb_1_1admin_1_1_user_admin.html  classarb_1_1admin_1_1_user_admin.js  classarb_1_1admin_1_1_view_event_admin-members.html  classarb_1_1admin_1_1_view_event_admin.html  (+118 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js  (+17 more)
frontend/: .babelrc  .env.example  .gitignore  Dockerfile  README-frontend.md  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  webpack.config.js
frontend/dev-tools/: camera-repro.html
frontend/docker/: nginx.conf
frontend/public/: Testmodel.jsx  apriltag-config.json  index.html
frontend/src/: ARRecorder.jsx  ARScene.jsx  App.jsx  App.optimized.jsx  App.original.jsx  App_FPS_removed.jsx  AprilTagLayoutEditor.jsx  CameraBackground.jsx  ConsolePanel.jsx  CoordinateTransformer.jsx  DebugCube.jsx  GLContextBinder.jsx  Landing.jsx  LandingPageTemplate.css  LandingPageTemplate.jsx  PromoPopup.jsx  SceneComponent.jsx  TestModelVideoComponent.jsx  UICamera.jsx  WavyGridBackground.jsx  WavyGridPage.jsx  alvaBridge.jsx  apriltagPipeline.jsx  consoleCapture.js  consoleCapture.jsx  index.css  index.jsx  trainAnimation.js  zapparPipeline.js
node/: plan.md
node/src/: schema1.puml
notes/: .gitignore  COMPONENT_DIAGRAM_README.md  README.md  plan.md  render_all.bat  render_all.sh
notes/src/: class_diagram.puml  component_diagram.puml  deployment_diagram.puml  sequence_diagram.puml  usecase_diagram.puml
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  all_34.js  (+79 more)
web-md/: README.md  index.html  plan.md  style.css
(+32 files in other folders)
